--- a/lab_1/main.html
+++ b/lab_1/main.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link href="styles.css" rel="stylesheet">
+        <link href="static/css/styles.css" rel="stylesheet">
         <title>Лабораторная работа №1</title>
     </head>
     <body>
