--- a/lab_4/index.html
+++ b/lab_4/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel ="stylesheet" href = "1234.css">
+<link rel ="stylesheet" href = "static/css/1234.css">
 </head>
 <body>
 
