--- a/exam/index.html
+++ b/exam/index.html
@@ -413,27 +413,27 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group row">
-                            <label for="address" class="col-md-3 col-form-label">Адрес доставки</label>
-                            <div class="col-md-9">
-                                <textarea type="text" class="form-control" id="address" name="address"></textarea>
+                            <label for="address" class="col-md-3 col-form-label">Название</label>
+                            <div class="col-md-9" id="modalName">
+                                First
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="address" class="col-md-3 col-form-label">Адрес доставки</label>
-                            <div class="col-md-9">
-                                <textarea type="text" class="form-control" id="address" name="address"></textarea>
+                            <label for="address" class="col-md-3 col-form-label">Административный округ</label>
+                            <div class="col-md-9" id="modalAdmArea">
+                                First
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="address" class="col-md-3 col-form-label">Адрес доставки</label>
-                            <div class="col-md-9">
-                                <textarea type="text" class="form-control" id="address" name="address"></textarea>
+                            <label for="address" class="col-md-3 col-form-label">Район</label>
+                            <div class="col-md-9" id="modalDistrict">
+                                First
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="address" class="col-md-3 col-form-label">Адрес доставки</label>
-                            <div class="col-md-9">
-                                <textarea type="text" class="form-control" id="address" name="address"></textarea>
+                            <label for="address" class="col-md-3 col-form-label">Рейтинг</label>
+                            <div class="col-md-9" id="modalRate">
+                                First
                             </div>
                         </div>
 
@@ -461,6 +461,11 @@
                             <label for="name" class="col-md-3 col-form-label">ФИО</label>
                             <div class="col-md-9">
                                 <input type="text" class="form-control" id="name" name="name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="name" class="col-md-3 col-form-label">Итого</label>
+                            <div class="col-md-9" id="final_sum">
                             </div>
                         </div>
                     </form>
