--- a/exam/index.html
+++ b/exam/index.html
@@ -370,7 +370,7 @@
                             <div class="form-check">
                                 <input class="form-check-input company" type="checkbox" value="" id="defaultCheck1">
                                 <label class="form-check-label" for="defaultCheck1">
-                                    <h4>В два раза больше</h4>
+                                    <h4>На компанию</h4>
                                 </label>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                             <div class="form-check">
                                 <input class="form-check-input privilege" type="checkbox" value="" id="defaultCheck2">
                                 <label class="form-check-label" for="defaultCheck2">
-                                    <h4>Только горячим</h4>
+                                    <h4>Использовать социальную скидку</h4>
                                 </label>
                             </div>
                         </div>
