--- a/exam/index.html
+++ b/exam/index.html
@@ -184,7 +184,7 @@
     </section>
     <hr class="my-4">
 
-    <section class=" sec5">
+    <section class=" sec5 menu" style="display: none;">
         <div class="text-center py-5 col-md-7 alert">
             <h2 class="pb-3">Меню</h2>
             <hr>
@@ -393,8 +393,8 @@
                 <h3 class="mx-5">Итого: <span class="final_sum">1599</span>р.</h3>
                 <h3 class="mx-5">Сетов: <span class="final_qty">0</span></h3>
             </div>
-            <button type="button" name="" id="" class="btn btn-primary mx-5" data-toggle="modal" data-target="#report">
-                <h3>Оформить заказ</h3>
+            <button type="button" name="" id="" class="btn btn-primary mx-5 last_form" data-toggle="modal" data-target="#report">
+                <h3 class="last_form">Оформить заказ</h3>
             </button>
         </div>
 
