--- a/exam/enter.html
+++ b/exam/enter.html
@@ -12,6 +12,7 @@
                     </a>
 
                     <h2>Административная панель</h2>
+                    <p>В процессе.Постараюсь реализоовать что-либо к завтрашнему дню.</p>
                         
                     <a class="button" href="main.html">Подрбнее</a>
 
@@ -24,7 +25,7 @@
                     </a>
 
                     <h2>Служба доставки еды</h2>
-                        
+                    <p>Работает все, кроме добавления информации модального окна по оформлению заказа</p>  
                     <a class="button" href="index.html">Подрбнее</a>
                 </div>
             </div>
