--- a/exam/enter.html
+++ b/exam/enter.html
@@ -25,7 +25,7 @@
                     </a>
 
                     <h2>Служба доставки еды</h2>
-                    <p>Работает все, кроме добавления информации модального окна по оформлению заказа</p>  
+                    <p>Все должно работотать корректно кроме пагинации</p>  
                     <a class="button" href="index.html">Подрбнее</a>
                 </div>
             </div>
