--- a/exam/index.html
+++ b/exam/index.html
@@ -56,13 +56,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/logo_1.png" class="d-block w-100">
+                    <img src="https://www.delivery-club.ru/naturmort/59bfe810dad27_480x300.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/logo_2.png" class="d-block w-100">
+                    <img src="https://www.delivery-club.ru/naturmort/5ed216bc7b802_480x300.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/logo_3.png" class="d-block w-100">
+                    <img src="https://www.delivery-club.ru/naturmort/2000030_480x300.jpg" class="d-block w-100">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -84,38 +84,38 @@
         <div class="container-fluid padding">
             <div class="row text-center padding">
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f1_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/3_enabled_67.png" class="f1_el">
+                    <h3>Бургеры</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f2_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/1_enabled_56.png" class="f2_el">
+                    <h3>Суши</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f3_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/2_enabled_60.png" class="f3_el">
+                    <h3>Пицца</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f4_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/4_enabled_87.png" class="f4_el">
+                    <h3>Напитки</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f5_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/12_checked_41.png" class="f5_el">
+                    <h3>Национальная кухня</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4">
-                    <img src="img/nav_logo.png" class="f6_el">
-                    <h3>TEXT</h3>
+                    <img src="https://image-router.dclub.ru/img/specialization/8_enabled_62.png" class="f6_el">
+                    <h3>Десерты</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed eos voluptatem incidunt nemo amet
                         dignissimos?</p>
                 </div>
@@ -130,7 +130,6 @@
             <hr>
         </div>
         <form class="showrest col-md-10">
-            <div class="row justify-content-center mx-0">
                 <div class="form-row">
                     <div class="form-group col-md-6 ">
                         <label for="admArea">Административный округ</label>
@@ -139,7 +138,6 @@
                         </select>
 
                     </div>
-                    <span id="result_multi"></span>
                     <div class="form-group col-md-6">
                         <label for="district">Район</label>
                         <select id="district" class="form-control">
@@ -354,7 +352,6 @@
             </div>
 
     </section>
-    <hr class="my-4">
 
     <section class="sec6">
         <div class="row justify-content-center mx-0 alert">
@@ -399,7 +396,14 @@
         </div>
 
     </section>
-
+    <footer class="page-footer">
+        <div class="container">
+            <p>©Московский Политех</p>
+            <p class = "cpryt">
+                Copyright 2020  | Template by oconsuel
+            </p>
+        </div>
+    </footer>
     <div class="modal fade" id="report" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
