--- a/exam/index.html
+++ b/exam/index.html
@@ -130,39 +130,39 @@
             <hr>
         </div>
         <form class="showrest col-md-10">
-                <div class="form-row">
-                    <div class="form-group col-md-6 ">
-                        <label for="admArea">Административный округ</label>
-                        <select name="admArea" id="admArea" class="form-control">
-                            <option selected>Не выбрано</option>
-                        </select>
+            <div class="form-row">
+                <div class="form-group col-md-6 ">
+                    <label for="admArea">Административный округ</label>
+                    <select name="admArea" id="admArea" class="form-control">
+                        <option selected>Не выбрано</option>
+                    </select>
 
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="district">Район</label>
-                        <select id="district" class="form-control">
-                            <option selected>Не выбрано</option>
-                        </select>
-                    </div>
                 </div>
+                <div class="form-group col-md-6">
+                    <label for="district">Район</label>
+                    <select id="district" class="form-control">
+                        <option selected>Не выбрано</option>
+                    </select>
+                </div>
+            </div>
 
-                <div class="form-row">
-                    <div class="form-group col-md-3">
-                        <label for="typeObject">Тип</label>
-                        <select id="typeObject" class="form-control">
-                            <option selected>Не выбрано</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="tableRests">Соц. скидки</label>
-                        <select id="tableRests" class="form-control ">
-                            <option selected>Не выбрано</option>
-                            <option selected>Есть</option>
-                            <option selected>Нет</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary col-md-3 align-self-center ml-auto btn1">Найти</button>
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="typeObject">Тип</label>
+                    <select id="typeObject" class="form-control">
+                        <option selected>Не выбрано</option>
+                    </select>
                 </div>
+                <div class="form-group col-md-3">
+                    <label for="tableRests">Соц. скидки</label>
+                    <select id="tableRests" class="form-control ">
+                        <option selected>Не выбрано</option>
+                        <option selected>Есть</option>
+                        <option selected>Нет</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary col-md-3 align-self-center ml-auto btn1">Найти</button>
+            </div>
         </form>
 
         <div class="container pt-3">
@@ -193,8 +193,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 1<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 1</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -209,8 +211,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 2<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 2</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -225,8 +229,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 3<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 3</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;" id="priceset3"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -241,8 +247,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 4<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 4</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -257,8 +265,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 5<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 5</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -273,8 +283,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 6<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 6</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -289,8 +301,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 7<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 7</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -305,8 +319,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 8<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 8</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -322,8 +338,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 9<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 9</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -338,8 +356,10 @@
                     <img src="img/card.png">
                 </div>
                 <div class="content1">
-                    <h2>Сет 10<br><span>Цена:</span><br><span class="priceset"
-                            style="color:#a64922; font-size: 20px;"></span></h2>
+                    <h2 class="nameset">
+                        <p>Сет 10</p><br><span>Цена:</span><br><span class="priceset"
+                            style="color:#a64922; font-size: 20px;"></span>
+                    </h2>
                 </div>
                 <div class="box_range">
                     <input type="range" name="value" class="range" value="0" min=0 max=10>
@@ -388,9 +408,10 @@
         <div class="row align-items-center justify-content-center mx-0">
             <div class="column justify-content-center">
                 <h3 class="mx-5">Итого: <span class="final_sum">1599</span>р.</h3>
-                <h3 class="mx-5">Сетов: <span class="final_qty">0</span></h3>
+                <h3 class="mx-5">Сетов: <span class="final_qty" id="final_qty">0</span></h3>
             </div>
-            <button type="button" name="" id="" class="btn btn-primary mx-5 last_form" data-toggle="modal" data-target="#report">
+            <button type="button" name="" id="" class="btn btn-primary mx-5 last_form" data-toggle="modal"
+                data-target="#report">
                 <h3 class="last_form">Оформить заказ</h3>
             </button>
         </div>
@@ -399,8 +420,8 @@
     <footer class="page-footer">
         <div class="container">
             <p>©Московский Политех</p>
-            <p class = "cpryt">
-                Copyright 2020  | Template by oconsuel
+            <p class="cpryt">
+                Copyright 2020 | Template by oconsuel
             </p>
         </div>
     </footer>
@@ -415,6 +436,33 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <h2 class="pb-1">Позиции заказа</h2>
+                    <form>
+                        <div class="form-group row" style="margin-left: 20px; margin-top: 20px;">
+                            <div class="col-md-3">Наименование
+                            </div>
+                            <div class="col-md-3">Количество
+                            </div>
+                            <div class="col-md-3">Цена
+                            </div>
+                        </div>
+                    </form>
+                    <hr>
+                    <form>
+                        <div class="form-group row" id="positions">
+                            
+                        </div>
+                    </form>
+                    <div class="dop_options">
+                        <h2>Дополнительные опции</h2>
+                        <form>
+                            <div class="form-group row" id="dop_opt_comp">
+                            </div>
+                            <div class="form-group row" id="dop_opt_priv">
+                            </div>
+                        </form>
+                    </div>
+                    <h2>Информация о заказе</h2>
                     <form>
                         <div class="form-group row">
                             <label for="address" class="col-md-3 col-form-label">Название</label>
@@ -476,7 +524,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
-                    <button type="button" class="btn btn-primary">Оформить заказ</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="btnconfirmation">Оформить заказ</button>
                 </div>
             </div>
         </div>
